refactor: 테스트에서 객체 직접 생성 대신 Fixtures를 최대한 활용하도록 변경